syntax = "proto3";
package api;
option go_package = "/api";
import "google/api/annotations.proto";

service UrlShortener {
  rpc CreateShortenedUrl (CreateShortenedUrlRequest) returns (CreateShortenedUrlResponse) {
    option (google.api.http) = {
      post: "/shorten"
      body: "original_url"
    };
  }

  rpc GetOriginalURL (GetOriginalURLRequest) returns (GetOriginalURLResponse) {
    option (google.api.http) = {
      get: "/original/{shortened_url}"
    };
  }
}

message CreateShortenedUrlRequest {
  string original_url = 1;
}

message CreateShortenedUrlResponse {
  string shortened_url = 1;
}

message GetOriginalURLRequest {
  string shortened_url = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
}
